...
    "catalog.addWakeUp" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Add wake-up card"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "添加起床卡"
...
            "state" : "translated",
            "value" : "保存图片"
          }
        }
      }
    },
    "entry.share" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Share"
          }
...
            "state" : "translated",
            "value" : "亮条代表本周已经打卡的天数哦~"
          }
        }
      }
    },
    "reminder.time" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Reminder time"
...
            "state" : "translated",
            "value" : "5:00～9:00内打卡算为早起，以实际打卡时间为准。"
          }
        }
      }
    },
    "wake.setAlarm" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Set reminder"
...
